@@ -81,6 +81,8 @@ Version 1.3
    there is a big backlog in the Send Queue (Justin)
  - Fixed issue 452 - Fix the ValueID for Door_Lock index to report correct
    status. (Justin)
+ - Fixed issue 448 - Dont request Basic Get if we have a mapped Class during
+   startup (Justin)
 
 Version 1.2 
  - Released on 15/10/14
